--- a/recipes.html
+++ b/recipes.html
@@ -23,7 +23,7 @@
       <div class="nav-center">
         <div class="nav-header">
           <a href="index.html" class="nav-logo">
-            <img src="./assets/logo.PNG" alt="GoYumm" />
+            <img src="./assets/logo.png" alt="GoYumm" />
           </a>
           <button class="nav-btn btn">
             <i class="fas fa-align-justify"></i>
